<resources>
    <string name="app_name">News App</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Categories</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_articles_to_show">No articles to show :(</string>
    <string name="article_image">Article Image</string>
    <string name="read">Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="by_author">By %1$s</string>

    // Drawer Menu
    <string name="menu_all">All</string>
    <string name="menu_automobile">Automobile</string>
    <string name="menu_business">Business</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_miscellaneous">Miscellaneous</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_science">Science</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_startup">Startup</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_world">World</string>

</resources>
