<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_all"
            android:icon="@drawable/ic_menu_item"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/menu_automobile"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_automobile" />
        <item
            android:id="@+id/menu_business"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/menu_entertainment"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/menu_miscellaneous"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_miscellaneous" />
        <item
            android:id="@+id/menu_politics"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_politics" />
        <item
            android:id="@+id/menu_science"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_science" />
        <item
            android:id="@+id/menu_sports"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/menu_startup"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_startup" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_technology" />
        <item
            android:id="@+id/menu_world"
            android:icon="@drawable/ic_unselected"
            android:title="@string/menu_world" />
    </group>
</menu>